main - 제품 소개 keyframe 활용해 fade-in효과

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="site_map_upper">
           <h1 class="site_map_logo">
             <a href="./index.html">
-              <img src="./main/images/main-logo.jpg" alt="logo" />
+              <img src="./main/images/main-logo1.svg" alt="logo" />
             </a>
           </h1>
           <div class="site_map_header_ui">
@@ -308,7 +308,9 @@
               >
             </p>
           </div>
+          <!-- main_bn_title -->
         </div>
+        <!-- main_bn -->
       </div>
       <!--contents-->
     </div>
@@ -327,7 +329,7 @@
           </p>
           <div class="main_btn">
             <a href="./about/about.html"
-              >기업정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a
+              >기업정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→</a
             >
           </div>
           <!--about_contents-->
@@ -345,11 +347,10 @@
             <button id="pre-btn">
               <i class="fa-solid fa-chevron-left fa-3x"></i>
             </button>
-            <!-- <a href="#"><i class="fa-solid fa-chevron-left fa-2x"></i></a> -->
 
             <div class="product-parents">
               <div class="product-box">
-                <div class="product1 show">
+                <div class="product1">
                   <a href="./product/product.html">
                     <div class="product-img">
                       <img src="./main/images/product1.svg" alt="product1" />
@@ -363,7 +364,7 @@
                   </a>
                 </div>
                 <!--product1-->
-                <div class="product1 show">
+                <div class="product1">
                   <a href="./product/product.html">
                     <div class="product-img">
                       <img src="./main/images/product2.svg" alt="product2" />
@@ -376,7 +377,7 @@
                   </a>
                 </div>
                 <!--product1-->
-                <div class="product1 show">
+                <div class="product1">
                   <a href="./product/product.html">
                     <div class="product-img">
                       <img src="./main/images/product3.svg" alt="product3" />
@@ -389,7 +390,8 @@
                   </a>
                 </div>
                 <!--product1-->
-                <div class="product2">
+          
+                <div class="product1">
                   <a href="./product/product.html">
                     <div class="product-img">
                       <img src="./main/images/product4.svg" alt="product4" />
@@ -402,7 +404,7 @@
                   </a>
                 </div>
                 <!--product1-->
-                <div class="product2">
+                <div class="product1">
                   <a href="./product/product.html">
                     <div class="product-img">
                       <img src="./main/images/product5.svg" alt="product5" />
@@ -415,7 +417,7 @@
                   </a>
                 </div>
                 <!--product1-->
-                <div class="product2">
+                <div class="product1">
                   <a href="./product/product.html">
                     <div class="product-img">
                       <img src="./main/images/product6.svg" alt="product6" />
@@ -428,6 +430,8 @@
                   </a>
                 </div>
                 <!--product1-->
+        
+
               </div>
               <!--product-box-->
             </div>
@@ -440,7 +444,7 @@
           <div class="btn-box">
             <div class="main_btn">
               <a href="product/product.html"
-                >제품정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a
+                >제품정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→</a
               >
             </div>
           </div>
@@ -461,7 +465,7 @@
               고객과 사회로부터 신뢰받는 기업으로 나아가고자 합니다.
             </p>
             <div class="main-btn">
-              <a href="#">윤리경영&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
+              <a href="#">윤리경영&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→</a>
             </div>
           </div>
         </div>
@@ -475,11 +479,11 @@
             <div class="develop-box">
               <h1>Innovative Drug Development</h1>
               <p>
-                지속적인 R&D를 통해<br />
-                헬스케어 전문기업으로 성장하겠습니다.
+                끊임없는 연구개발을 통해 <br>
+                고객의 건강한 삶을 위한더 나은 가치를 만들어갑니다
               </p>
               <div class="main-btn">
-                <a href="#">연구개발&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
+                <a href="#">연구개발&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→</a>
               </div>
             </div>
           </div>
@@ -495,11 +499,11 @@
             <div class="text-box">
               <h1>News & Notice</h1>
               <p>
-                동아제약의 최신 뉴스와 소식을 <br />
-                지금 만나보세요.
+                동아제약에서 전하는 다양한 뉴스와<br>
+                소식을 지금 만나보세요.
               </p>
               <div class="main-btn">
-                <a href="#">홍보센터&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
+                <a href="#">홍보센터&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→</a>
               </div>
             </div>
             <!--text-box-->
@@ -533,61 +537,59 @@
         <!--container-->
       </div>
       <!--recruit-->
-    </div>
-    <!--contents-->
 
-    <footer class="footer">
-      <div class="footer_left">
-        <div class="footer_left_upper">
-          <a href="./index.html">
-            <img src="./main/images/f-logo.jpg" alt="f-logo" />
-          </a>
-          <div class="footer_left_info_1">
-            <p><a href="#">개인정보방침</a></p>
-            <p><a href="#">이용약관</a></p>
+      <footer class="footer">
+        <div class="footer_left">
+          <div class="footer_left_upper">
+            <a href="./index.html">
+              <img src="./main/images/f-logo.jpg" alt="f-logo" />
+            </a>
+            <div class="footer_left_info_1">
+              <p><a href="#">개인정보방침</a></p>
+              <p><a href="#">이용약관</a></p>
+            </div>
+          </div>
+  
+          <div class="footer_left_info_2">
+            <p>
+              서울시 동대문구 천호대로64 | 대표번호 82-02-920-8112 | 팩스
+              82-02-920-8708 | E-mail : donga@naver.com <br />
+              사업자 등록 번호 : 204-86-40118 | ⓒ2013.Dong-A All rights reserved.
+            </p>
           </div>
         </div>
-
-        <div class="footer_left_info_2">
-          <p>
-            서울시 동대문구 천호대로64 | 대표번호 82-02-920-8112 | 팩스
-            82-02-920-8708 | E-mail : donga@naver.com <br />
-            사업자 등록 번호 : 204-86-40118 | ⓒ2013.Dong-A All rights reserved.
-          </p>
+        <div class="footer_right">
+          <div class="family_site">
+            <p>Family Site</p>
+            <svg
+              width="15"
+              height="9"
+              viewBox="0 0 15 9"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M1 1.25L7.5 7.75L14 1.25"
+                stroke="black"
+                stroke-width="1.3px"
+              />
+            </svg>
+          </div>
+          <div class="sns_btn">
+            <a href="https://www.naver.com/">
+              <img src="./main/images/icon-naver.svg" alt="naver_btn" />
+            </a>
+            <a href="https://www.facebook.com/">
+              <img src="./main/images/icon-facebook.svg" alt="facebook_btn" />
+            </a>
+            <a href="https://www.instagram.com/">
+              <img src="./main/images/icon-instagram.svg" alt="instagram_btn" />
+            </a>
+            <a href="https://www.youtube.com/">
+              <img src="./main/images/icon-youtube.svg" alt="youtube_btn" />
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="footer_right">
-        <div class="family_site">
-          <p>Family Site</p>
-          <svg
-            width="15"
-            height="9"
-            viewBox="0 0 15 9"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M1 1.25L7.5 7.75L14 1.25"
-              stroke="black"
-              stroke-width="1.3px"
-            />
-          </svg>
-        </div>
-        <div class="sns_btn">
-          <a href="https://www.naver.com/">
-            <img src="./main/images/icon-naver.svg" alt="naver_btn" />
-          </a>
-          <a href="https://www.facebook.com/">
-            <img src="./main/images/icon-facebook.svg" alt="facebook_btn" />
-          </a>
-          <a href="https://www.instagram.com/">
-            <img src="./main/images/icon-instagram.svg" alt="instagram_btn" />
-          </a>
-          <a href="https://www.youtube.com/">
-            <img src="./main/images/icon-youtube.svg" alt="youtube_btn" />
-          </a>
-        </div>
-      </div>
-    </footer>
+      </footer>
   </body>
 </html>
