--- a/product/product.html
+++ b/product/product.html
@@ -19,15 +19,16 @@
 
 <body>
   <header class="header">
-    <h1 class="logo">
-      <a href="../index.html">
-        <img src="../main/images/main-logo.jpg" alt="logo" />
-      </a>
-    </h1>
+    <div class="logo">
+      <a href="/index.html">
+        <img src="../main/images/main-logo.svg" alt="logo"
+      /></a>
+    </div>
     <nav class="header_nav">
       <ul class="dep1_ul">
         <li class="dep1_li">
-          <a href="./about.html">기업정보
+          <a href="/about/about.html"
+            >기업정보
             <ul class="dep2_ul">
               <li class="dep2_li">
                 <a href="./about/about.html">기업소개 </a>
@@ -42,18 +43,24 @@
           </a>
         </li>
         <li class="dep1_li">
-          <a href="../product/product.html">제품정보
+          <a href="/product/product.html"
+            >제품정보
             <ul class="dep2_ul">
               <li class="dep2_li">
-                <a href="../product/product.html">제품검색</a>
+                <a href="./product/product.html">제품검색</a>
               </li>
-              <li class="dep2_li"><a href="../product/product.html">제품소식 </a></li>
-              <li class="dep2_li"><a href="../product/product.html">약국찾기 </a></li>
+              <li class="dep2_li">
+                <a href="./product/product.html">제품소식 </a>
+              </li>
+              <li class="dep2_li">
+                <a href="./product/product.html">약국찾기 </a>
+              </li>
             </ul>
           </a>
         </li>
         <li class="dep1_li">
-          <a href="#">연구개발
+          <a href="#"
+            >연구개발
             <ul class="dep2_ul">
               <li class="dep2_li">
                 <a href="#">연구센터소개 </a>
@@ -68,7 +75,8 @@
           </a>
         </li>
         <li class="dep1_li">
-          <a href="#">윤리경영
+          <a href="#"
+            >윤리경영
             <ul class="dep2_ul">
               <li class="dep2_li">
                 <a href="#">윤리경영 </a>
@@ -78,7 +86,8 @@
           </a>
         </li>
         <li class="dep1_li">
-          <a href="#">홍보센터
+          <a href="#"
+            >홍보센터
             <ul class="dep2_ul">
               <li class="dep2_li">
                 <a href="#">공지&뉴스</a>
@@ -93,14 +102,22 @@
 
     <div class="header_ui">
       <div class="mall">
-        <img src="../main/images/icon-cart.svg" alt="mall" />
-        <a href="https://dmall.co.kr/product/index.html">&nbsp;동아제약 공식몰&nbsp;</a>
+        <div class="mall_img">
+          <img src="../main/images/icon-cart.svg" alt="mall" />
+        </div>
+        <a href="https://dmall.co.kr/product/index.html">동아제약 공식몰</a>
       </div>
       <!--mall-->
-      <p>&nbsp;| &nbsp;</p>
-      <div class="lang">
-        <a href="#"><img src="../main/images/icon-lang.svg" alt="lang" />&nbsp;&nbsp;EN</a>
+      <p class="between">|</p>
+
+      <div class="img_lang">
+        <a href="#">
+          <img src="../main/images/icon-lang.svg" alt="lang" />
+        </a>
       </div>
+      <!--img_lang-->
+      <div id="google_translate_element" class="hd_lang"></div>
+
       <div class="m_btn">
         <a href="#">
           <img src="../main/images/icon-menu.svg" alt="site-map-menu" />
@@ -108,12 +125,26 @@
       </div>
     </div>
   </header>
+  <script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        {
+          pageLanguage: "ko",
+          includedLanguages:
+            "ko,zh-CN,zh-TW,ja,vi,th,tl,km,my,mn,ru,en,fr,ar",
+          //layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          autoDisplay: false,
+        },
+        "google_translate_element"
+      );
+    }
+  </script>
   <!-- site map -->
   <div class="site_map">
     <div class="site_map_upper">
       <h1 class="site_map_logo">
-        <a href="./index.html">
-          <img src="../main/images/main-logo.jpg" alt="logo" />
+        <a href="../index.html">
+          <img src="../main/images/main-logo.svg" alt="logo" />
         </a>
       </h1>
       <div class="site_map_header_ui">
@@ -129,7 +160,8 @@
     <nav class="site_map_nav">
       <ul class="site_map_dep1_ul">
         <li class="site_map_dep1_li">
-          <a href="./about/about.html">기업정보
+          <a href="./about/about.html"
+            >기업정보
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
                 <a href="./about/about.html">기업소개</a>
@@ -144,22 +176,24 @@
           </a>
         </li>
         <li class="site_map_dep1_li">
-          <a href="#">제품정보
+          <a href="#"
+            >제품정보
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
-                <a href="./product/product.html">제품검색</a>
+                <a href="#">제품검색</a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="./product/product.html">제품소식 </a>
+                <a href="#">제품소식 </a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="./product/product.html">약국찾기 </a>
+                <a href="#">약국찾기 </a>
               </li>
             </ul>
           </a>
         </li>
         <li class="site_map_dep1_li">
-          <a href="#">연구개발
+          <a href="#"
+            >연구개발
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
                 <a href="#">연구센터소개</a>
@@ -174,7 +208,8 @@
           </a>
         </li>
         <li class="site_map_dep1_li">
-          <a href="#">윤리경영
+          <a href="#"
+            >윤리경영
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
                 <a href="#">윤리강령</a>
@@ -185,7 +220,8 @@
           </a>
         </li>
         <li class="site_map_dep1_li">
-          <a href="#">홍보센터
+          <a href="#"
+            >홍보센터
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
                 <a href="#">공지 & 뉴스</a>
@@ -223,7 +259,7 @@
       <div class="search-box">
         <div class="search-box2">
           <h2>제품검색</h2>
-          <form action="search"> </form>
+          <form action="search"></form>
           <input type="search" id="search" placeholder="&nbsp;검색어를 입력해주세요">
           <a href="#"><img src="./images/icon-search.svg" alt="search"></a>
         </div>
@@ -388,8 +424,10 @@
       <div class="numbers">
         <button class="leftMax">〈〈</button>
         <button class="left">〈</button>
-        <p class="page">1</p>
-        <p class="page">2</p>
+        <p class="pcP">1</p>
+        <p class="pcP">2</p>
+        <p class="mobileP">3</p>
+        <p class="mobileP">4</p>
         <button class="right">〉</button>
         <button class="rightMax">〉〉</button>
       </div>
