기업소개 css 수정

--- a/about/about.html
+++ b/about/about.html
@@ -285,14 +285,15 @@
             <p>
               <strong>동아제약</strong>은 소비자들이 처방전 없이 살 수 있는
               일반의약품, 의약외품, 의료기기를 비롯하여 건강기능식품 및 화장품을
-              주 사업분야로 하고 있습니다. 주요 제품으로는 박카스, 판피린, 템포,
-              써큐란, 모닝케어 등이 있습니다.
+              주 사업분야로 하고 있습니다.<br />
+              주요 제품으로는 박카스, 판피린, 템포, 써큐란, 모닝케어 등이
+              있습니다.
             </p>
             <br />
             <p>
               <strong>동아제약</strong>은 창립 당시의 ‘좋은 의약품을 생산하여
-              국민 건강에 이바지한다’는 창업정신을 그대로 계승해 글로벌 헬스케어
-              전문기업으로 성장해 나갈 것입니다.
+              국민 건강에 이바지한다’는 창업정신을 그대로 계승해 <br />글로벌
+              헬스케어 전문기업으로 성장해 나갈 것입니다.
             </p>
           </div>
           <!--intro-text-->
