서브페이지) 제품 소개 - 페이지 넘기기 구현 (pc/mobile)

--- a/product/product.html
+++ b/product/product.html
@@ -160,33 +160,33 @@
     <nav class="site_map_nav">
       <ul class="site_map_dep1_ul">
         <li class="site_map_dep1_li">
-          <a href="./about/about.html"
+          <a href="../about/about.html"
             >기업정보
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
-                <a href="./about/about.html">기업소개</a>
+                <a href="../about/about.html">기업소개</a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="./about/about.html">회사연혁</a>
+                <a href="../about/about.html">회사연혁</a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="./about/about.html">위치안내</a>
+                <a href="../about/about.html">위치안내</a>
               </li>
             </ul>
           </a>
         </li>
         <li class="site_map_dep1_li">
-          <a href="#"
+          <a href="../product/product.html"
             >제품정보
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
-                <a href="#">제품검색</a>
+                <a href="../product/product.html">제품검색</a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="#">제품소식 </a>
+                <a href="../product/product.html">제품소식 </a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="#">약국찾기 </a>
+                <a href="../product/product.html">약국찾기 </a>
               </li>
             </ul>
           </a>
@@ -344,7 +344,7 @@
             <h3>박카스 에프액</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 의약외품</li>
-              <li class="pro_li_li">효능분류 : 자양강장변질제</li>
+              <li class="pro_li_li">효능분류 : 자양강장제</li>
             </ul>
             <!--pro_li_ul-->
           </li>
@@ -426,8 +426,6 @@
         <button class="left">〈</button>
         <p class="pcP">1</p>
         <p class="pcP">2</p>
-        <p class="mobileP">3</p>
-        <p class="mobileP">4</p>
         <button class="right">〉</button>
         <button class="rightMax">〉〉</button>
       </div>
