경로 오류 수정

--- a/about/about.html
+++ b/about/about.html
@@ -35,46 +35,46 @@
   <body>
     <header class="header">
       <div class="logo">
-        <a href="/index.html">
+        <a href="../index.html">
           <img src="../main/images/main-logo.svg" alt="logo"
         /></a>
       </div>
       <nav class="header_nav">
         <ul class="dep1_ul">
           <li class="dep1_li">
-            <a href="/about/about.html"
+            <a href="../about/about.html"
               >기업정보
               <ul class="dep2_ul">
                 <li class="dep2_li">
-                  <a href="./about/about.html">기업소개 </a>
+                  <a href="../about/about.html">기업소개 </a>
                 </li>
                 <li class="dep2_li">
-                  <a href="./about/about.html">회사연혁</a>
+                  <a href="../about/about.html">회사연혁</a>
                 </li>
                 <li class="dep2_li">
-                  <a href="./about/about.html">위치안내</a>
+                  <a href="../about/about.html">위치안내</a>
                 </li>
               </ul>
             </a>
           </li>
           <li class="dep1_li">
-            <a href="/product/product.html"
+            <a href="../product/product.html"
               >제품정보
               <ul class="dep2_ul">
                 <li class="dep2_li">
-                  <a href="./product/product.html">제품검색</a>
+                  <a href="../product/product.html">제품검색</a>
                 </li>
                 <li class="dep2_li">
-                  <a href="./product/product.html">제품소식 </a>
+                  <a href="../product/product.html">제품소식 </a>
                 </li>
                 <li class="dep2_li">
-                  <a href="./product/product.html">약국찾기 </a>
+                  <a href="../product/product.html">약국찾기 </a>
                 </li>
               </ul>
             </a>
           </li>
           <li class="dep1_li">
-            <a href="./product/product.html"
+            <a href="#"
               >연구개발
               <ul class="dep2_ul">
                 <li class="dep2_li">
@@ -185,7 +185,7 @@
                   <a href="./about/about.html">회사연혁</a>
                 </li>
                 <li class="site_map_dep2_li">
-                  <a href="./about/about.html">위치안내</a>
+                  <a href="body.html.#contact">위치안내</a>
                 </li>
               </ul>
             </a>
@@ -378,7 +378,7 @@
         <!--container-->
       </div>
       <!--vision3-->
-      <div class="contact">
+      <div id="contact">
         <div class="container">
           <div class="menu">
             <h1>오시는 길</h1>
