--- a/product/product.html
+++ b/product/product.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="./css/product-mobile.css" media="screen and (max-width:767px)" />
   <!-- 여기 다시 고쳐야함 모바일 - 찍기 -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="./js/product.js"></script>
 </head>
 
 <body>
@@ -253,17 +252,23 @@
         <p class="lnb-color">&nbsp;&nbsp;&nbsp;&nbsp;제품검색</p>
       </div>
       <!--lnb-->
+      
       <div class="sub-title">
         <h1>제품검색</h1>
       </div>
       <div class="search-box">
         <div class="search-box2">
           <h2>제품검색</h2>
-          <form action="search"></form>
-          <input type="search" id="search" placeholder="&nbsp;검색어를 입력해주세요">
-          <a href="#"><img src="./images/icon-search.svg" alt="search"></a>
-        </div>
+          <form action="">
+          <input type="search" id="search" value="" placeholder="&nbsp;검색어를 입력해주세요">
+          <button id="search-btn">
+            <img src="./images/icon-search.svg" alt="search">
+          </button>
+          </form> 
+      </div>
         <!--box2-->
+
+
         <div class="depth2">
           <ul class="depth2_ul">
             <li class="depth2_li">
@@ -297,7 +302,7 @@
             <div class="pro-img">
               <img src="./images/p1.jpg" alt="product1">
             </div>
-            <h3>노스카나겔</h3>
+            <h3 class="drug">노스카나겔</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li"><span>제품구분</span> : 일반의약품</li>
               <li class="pro_li_li">효능분류 : 세포의약품</li>
@@ -308,7 +313,7 @@
             <div class="pro-img">
               <img src="./images/p2.jpg" alt="product2">
             </div>
-            <h3>덴파사캡슐</h3>
+            <h3 class="drug">덴파사캡슐</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 일반의약품</li>
               <li class="pro_li_li">효능분류 : 치과구강용약</li>
@@ -319,7 +324,7 @@
             <div class="pro-img">
               <img src="./images/p3.jpg" alt="product3">
             </div>
-            <h3>드라이문트겔</h3>
+            <h3 class="drug">드라이문트겔</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 일반의약품</li>
               <li class="pro_li_li">효능분류 : 치과구강용약</li>
@@ -330,7 +335,7 @@
             <div class="pro-img">
               <img src="./images/p4.jpg" alt="product4">
             </div>
-            <h3>마그랑비 연질캡슐</h3>
+            <h3 class="drug">마그랑비 연질캡슐</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 일반의약품</li>
               <li class="pro_li_li">효능분류 : 비타민제</li>
@@ -341,7 +346,7 @@
             <div class="pro-img">
               <img src="./images/p5.jpg" alt="product5">
             </div>
-            <h3>박카스 에프액</h3>
+            <h3 class="drug">박카스 에프액</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 의약외품</li>
               <li class="pro_li_li">효능분류 : 자양강장제</li>
@@ -352,7 +357,7 @@
             <div class="pro-img">
               <img src="./images/p6.jpg" alt="product6">
             </div>
-            <h3>검가드 치약</h3>
+            <h3 class="drug">검가드 치약</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 의약외품</li>
               <li class="pro_li_li">효능분류 : 치약제 </li>
@@ -363,7 +368,7 @@
             <div class="pro-img">
               <img src="./images/p7.jpg" alt="product7">
             </div>
-            <h3>디에이덤 레몬캔디</h3>
+            <h3 class="drug">디에이덤 레몬캔디</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 생활건강</li>
               <li class="pro_li_li">효능분류 : 캔디류(식품)</li>
@@ -374,7 +379,7 @@
             <div class="pro-img">
               <img src="./images/p8.jpg" alt="product8">
             </div>
-            <h3>아일로 화이트치온</h3>
+            <h3 class="drug">아일로 화이트치온</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 생활건강</li>
               <li class="pro_li_li">효능분류 : 혼합비타민제</li>
@@ -385,7 +390,7 @@
             <div class="pro-img">
               <img src="./images/p9.jpg" alt="product9">
             </div>
-            <h3>비타민C 비타그란</h3>
+            <h3 class="drug">비타민C 비타그란</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 건강기능식품</li>
               <li class="pro_li_li">효능분류 : 영양제</li>
@@ -396,7 +401,7 @@
             <div class="pro-img">
               <img src="./images/p10.jpg" alt="product10">
             </div>
-            <h3>오쏘몰 이뮨</h3>
+            <h3 class="drug">오쏘몰 이뮨</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 건강기능식품</li>
               <li class="pro_li_li">효능분류 : 영양제</li>
@@ -406,7 +411,7 @@
             <div class="pro-img">
               <img src="./images/p11.jpg" alt="product11">
             </div>
-            <h3>가그린 오리지널</h3>
+            <h3 class="drug">가그린 오리지널</h3>
             <ul class="pro_li_ul">
               <li class="pro_li_li">제품구분 : 의약외품</li>
               <li class="pro_li_li">효능분류 : 구강케어 </li>
@@ -479,5 +484,5 @@
   </footer>
   </div>
 </body>
-
+<script src="./js/product.js"></script>
 </html>
